--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -1,6 +1,12 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0b1797b3",
+   "metadata": {},
+   "source": "## Setup\nInstall the required Python packages for web scraping, data processing, and caching."
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cell-01-install",
@@ -23,12 +29,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f2eb2e8",
+   "metadata": {},
+   "source": "## Imports & Configuration\nImport all necessary libraries and define global configuration constants including output paths, crawl settings, and ID discovery parameters."
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cell-02-config",
    "metadata": {},
    "outputs": [],
-   "source": "# Cell 2 – Imports & config\nfrom __future__ import annotations\n\nimport re\nimport json\nimport time\nimport random\nimport threading\nfrom concurrent.futures import ThreadPoolExecutor, as_completed\nfrom datetime import datetime, timezone\nfrom pathlib import Path\nfrom typing import Dict, Iterable, List, Optional\n\nimport pandas as pd\nimport requests\nfrom bs4 import BeautifulSoup\nfrom tqdm.auto import tqdm\n\ntry:\n    import requests_cache\nexcept ModuleNotFoundError:\n    requests_cache = None\n\n# ── Output directory ────────────────────────────────────────────────────────\nOUTPUT_DIR = Path.cwd() / \"assets\"\nOUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n\n# ── HTTP cache (speeds up reruns; set to False to disable) ──────────────────\nCACHE_PATH           = OUTPUT_DIR / \"http_cache\"\nUSE_HTTP_CACHE       = True\nCACHE_EXPIRE_SECONDS = 60 * 60 * 24   # 24 h\n\n# ── Polite crawl settings ───────────────────────────────────────────────────\nREQUEST_DELAY_RANGE = (0.15, 0.45)   # seconds between requests\nMAX_WORKERS         = 6              # concurrent HamroPatro profile fetches\n\n# ── ID discovery: HamroPatro range scan ────────────────────────────────────\n# IDs observed in your data start at ~339,300. With ~3,500 candidates the\n# range tops out around ~343,000. We use a tight window + threading so the\n# scan finishes in ~5–10 minutes instead of 1.5 hours.\nHAMRO_ID_RANGE_START            = 339_000   # just below first known ID\nHAMRO_ID_RANGE_END              = 343_500   # generous upper bound (~4,500 IDs total)\nRANGE_SCAN_WORKERS              = 12        # threads for the range scan (safe for this site)\n\n# ── Minimum expected candidates (WARN only, never crash) ───────────────────\n# Original notebook had raise RuntimeError if < 3300 → that blocked everything.\n# Now we just print a warning.\nMIN_EXPECTED_CANDIDATES = 3300\n\n# ── Feature flags ──────────────────────────────────────────────────────────\nFALLBACK_FETCH_2082LIVE_PROFILE = True  # fetch 2082.live profile for missing edu\n\n# ── Base URLs ──────────────────────────────────────────────────────────────\nBASE_2082LIVE = \"https://2082.live\"\nBASE_HAMRO    = \"https://election.hamropatro.com\"\n\n# ── Output files ───────────────────────────────────────────────────────────\nINDEX_JSONL    = OUTPUT_DIR / \"index_candidates.jsonl\"\nHAMRO_JSONL    = OUTPUT_DIR / \"profiles_hamropatro.jsonl\"\nFINAL_CSV      = OUTPUT_DIR / \"nepal_election_2082_candidates_education.csv\"\nFINAL_PARQUET  = OUTPUT_DIR / \"nepal_election_2082_candidates_education.parquet\"\n\nprint(\"Output directory:\", OUTPUT_DIR.resolve())"
+   "source": [
+    "# Cell 2 – Imports & config\n",
+    "from __future__ import annotations\n",
+    "\n",
+    "import re\n",
+    "import json\n",
+    "import time\n",
+    "import random\n",
+    "import threading\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "from datetime import datetime, timezone\n",
+    "from pathlib import Path\n",
+    "from typing import Dict, Iterable, List, Optional\n",
+    "\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "try:\n",
+    "    import requests_cache\n",
+    "except ModuleNotFoundError:\n",
+    "    requests_cache = None\n",
+    "\n",
+    "# ── Output directory ────────────────────────────────────────────────────────\n",
+    "OUTPUT_DIR = Path.cwd() / \"assets\"\n",
+    "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# ── HTTP cache (speeds up reruns; set to False to disable) ──────────────────\n",
+    "CACHE_PATH           = OUTPUT_DIR / \"http_cache\"\n",
+    "USE_HTTP_CACHE       = True\n",
+    "CACHE_EXPIRE_SECONDS = 60 * 60 * 24   # 24 h\n",
+    "\n",
+    "# ── Polite crawl settings ───────────────────────────────────────────────────\n",
+    "REQUEST_DELAY_RANGE = (0.15, 0.45)   # seconds between requests\n",
+    "MAX_WORKERS         = 6              # concurrent HamroPatro profile fetches\n",
+    "\n",
+    "# ── ID discovery: HamroPatro range scan ────────────────────────────────────\n",
+    "# IDs observed in your data start at ~339,300. With ~3,500 candidates the\n",
+    "# range tops out around ~343,000. We use a tight window + threading so the\n",
+    "# scan finishes in ~5–10 minutes instead of 1.5 hours.\n",
+    "HAMRO_ID_RANGE_START            = 339_000   # just below first known ID\n",
+    "HAMRO_ID_RANGE_END              = 343_500   # generous upper bound (~4,500 IDs total)\n",
+    "RANGE_SCAN_WORKERS              = 12        # threads for the range scan (safe for this site)\n",
+    "\n",
+    "# ── Minimum expected candidates (WARN only, never crash) ───────────────────\n",
+    "# Original notebook had raise RuntimeError if < 3300 → that blocked everything.\n",
+    "# Now we just print a warning.\n",
+    "MIN_EXPECTED_CANDIDATES = 3300\n",
+    "\n",
+    "# ── Feature flags ──────────────────────────────────────────────────────────\n",
+    "FALLBACK_FETCH_2082LIVE_PROFILE = True  # fetch 2082.live profile for missing edu\n",
+    "\n",
+    "# ── Base URLs ──────────────────────────────────────────────────────────────\n",
+    "BASE_2082LIVE = \"https://2082.live\"\n",
+    "BASE_HAMRO    = \"https://election.hamropatro.com\"\n",
+    "\n",
+    "# ── Output files ───────────────────────────────────────────────────────────\n",
+    "INDEX_JSONL    = OUTPUT_DIR / \"index_candidates.jsonl\"\n",
+    "HAMRO_JSONL    = OUTPUT_DIR / \"profiles_hamropatro.jsonl\"\n",
+    "FINAL_CSV      = OUTPUT_DIR / \"nepal_election_2082_candidates_education.csv\"\n",
+    "FINAL_PARQUET  = OUTPUT_DIR / \"nepal_election_2082_candidates_education.parquet\"\n",
+    "\n",
+    "print(\"Output directory:\", OUTPUT_DIR.resolve())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c7c7a8",
+   "metadata": {},
+   "source": "## Helper Utilities\nDefine text-cleaning functions, education-value validators, BeautifulSoup helpers, and JSONL I/O utilities used throughout the pipeline."
   },
   {
    "cell_type": "code",
@@ -187,6 +269,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3aeab7f0",
+   "metadata": {},
+   "source": "## HTTP Session & Cache\nBuild the shared `requests.Session` with retry logic and optionally attach an HTTP cache to speed up re-runs."
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "cell-04-session",
@@ -249,6 +337,12 @@
     "session = make_session()\n",
     "print(\"Session ready.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f10cf88",
+   "metadata": {},
+   "source": "## Candidate ID Discovery — HamroPatro Range Scan\nProbe HamroPatro's candidate profile URLs in parallel across a known ID range to discover all valid candidate IDs."
   },
   {
    "cell_type": "code",
@@ -322,6 +416,12 @@
     "\n",
     "print(\"ID discovery function defined.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9d5485c",
+   "metadata": {},
+   "source": "## Build Candidate Index\nRun the range scan (or resume from a saved JSONL file) and write a structured index of all candidate IDs and their profile URLs."
   },
   {
    "cell_type": "code",
@@ -513,6 +613,12 @@
     "print(f\"\\nIndex size: {len(index_df):,} candidates\")\n",
     "index_df.head(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0869812",
+   "metadata": {},
+   "source": "## Scrape HamroPatro Profiles\nParse each candidate's HamroPatro profile page to extract name, party, age, gender, constituency, education, and other demographic fields."
   },
   {
    "cell_type": "code",
@@ -806,6 +912,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8511b47",
+   "metadata": {},
+   "source": "## Education Fallback — 2082.live\nFor candidates where HamroPatro is missing a qualification field, attempt to retrieve the education value from the corresponding 2082.live profile page."
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "cell-08-2082live-fallback",
@@ -905,6 +1017,12 @@
     "else:\n",
     "    print(\"2082.live fallback disabled.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30e44281",
+   "metadata": {},
+   "source": "## Merge, Normalise & Export\nJoin the candidate index with the scraped profiles, apply education bucketing and institution normalisation, then export the final dataset to CSV and Parquet."
   },
   {
    "cell_type": "code",
@@ -1363,6 +1481,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46737b06",
+   "metadata": {},
+   "source": "## QA Split — Clean vs Audit\nValidate and clean the merged dataset, filter out artefact education values, and split into a clean export and an audit file containing error rows."
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "cell-10-qa-split",
@@ -1426,6 +1550,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49befdcd",
+   "metadata": {},
+   "source": "## QA Assertions\nRun hard assertions to verify uniqueness of candidate IDs, absence of errors in the clean dataset, valid gender values, and full constituency coverage."
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "cell-11-assertions",
@@ -1471,6 +1601,12 @@
     "\n",
     "hard_assertions(clean_df, audit_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cc9ac47",
+   "metadata": {},
+   "source": "## Summary Statistics\nPrint overall candidate counts and the distribution across education buckets. Inspect rows that landed in the \"Other / Unclear\" bucket."
   },
   {
    "cell_type": "code",
@@ -1940,6 +2076,12 @@
     "print(\"\\nSample rows where education is 'Other / Unclear':\")\n",
     "clean_df.loc[clean_df[\"education_bucket\"] == \"Other / Unclear\"].head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9368aaa4",
+   "metadata": {},
+   "source": "## Run Metadata\nCompute SHA-256 checksums of the output files and write a `run_metadata.json` recording source URLs, row counts, and file hashes for reproducibility."
   },
   {
    "cell_type": "code",
